# django-admin-commands

./: README.md  main.py  pyproject.toml
admin_commands/: apps.py  consts.py  forms.py  utils.py
dummy_project/: manage.py
dummy_project/dummy_project/: asgi.py  settings.py  urls.py  wsgi.py
src/django_admin_commands/: admin.py  apps.py  checks.py  consts.py  forms.py  models.py  utils.py
src/django_admin_commands/templates/django_admin_commands/admin/: run_command.html
