[project]
name = "django-admin-commands"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lucas Camillo Ribeiro da Silveira" }
]
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
